fix: fix home overflow

--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -1,5 +1,4 @@
 .content {
-  width: 100%;
   margin: 0 auto;
   padding: 15px;
   display: flex;
